Updated Endpoint and swagger
